@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+ - Add some nice documentation on overall structure
 
 0.002211  2014-05-15 20:06:48-05:00 America/Chicago
   - Fix some missing ABSTRACTs (Fixes GH#22, thanks Gregor Herrmann!)
